--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,6 +1,6 @@
 .Welcome_section {
 	width: 100%;
-	height: 60em; 
+	height: 150vh; 
 	background-image: url('../images/ea26fd_e23df2dd67964b8d80e3d762f6789883_mv2 (1).webp');
 }
 
