--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,17 @@ body {
     flex-direction: row-reverse;
 }
 .navigation_bar {
-    position: absolute;
-/*    float: right;*/
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    height: 80%;
     display: flex;
     flex-direction: column;
 /*    opacity: 0;*/
-/*    height: 0px;/*/
     right: 1;
     z-index: 1;
     width: 5%;
+    margin: 10% 0;
 }
 
 .dots_bars {
